# site

./: .gitignore  README.md  RenderQuarto.sh  _quarto.yml  index.qmd  styles.css
docs/: about.html  index.html  listings.json  search.json
materials/: 0_materials.qmd  0_materials_notes.txt  10_1_big_o_constant_o1.qmd  10_2_big_o_logarithmic_ologn.qmd  10_3_heap_sorting_slides.qmd  10_4_big_o_exponential_o2n.qmd  10_5_travellingSalesman.qmd  10_file_operations_structured_data.qmd  11_complexity_intro_slides.qmd  11_python_modules_and_files.qmd  11_python_modules_and_libraries.qmd  12_comprehensive_big_o_slides.qmd  13_Applications_filesearch.qmd  13_exception_handling_slides.qmd  14_Applications_QRCreator.qmd  2_i_introToPython_solutions_bk.txt  3_i_introToPython.qmd  3_i_introToPython_solutions.qmd  3_ii_introToPython.qmd  3_ii_introToPython_solutions.qmd  4_data_structures_solutions.qmd  4_numerical_programs_solutions.qmd  5_exhaustive_approximation.qmd  5_numerical_programs_solutions.qmd  6_energy_analysis_slides.qmd  6_exhaustive_approximation.qmd  6_lambdaFunctions.qmd  7_challenge_solutions_instructor.txt  7_higherOrderFunctions_decorators_classes.qmd  7_midterm_study_sheet.qmd  7_python_fundamentals_slides.qmd  7_python_fundamentals_slides_all_together.qmd  8_classesAndDecorators.qmd  8_lambdaFunctions_i.qmd  8_objectOrientedProgramming_exceptions.qmd  9_complexity_intro_slides.qmd  9_socket_programming_messaging.qmd  RenderToPDFandSlides.sh  boilerplate_slides.txt  (+3 more)
materials/files/act09/: pyproject.toml  sample_article.txt  sample_review.txt  text_analyzer_sol.py
(+93 files in other folders)
